/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package hbase.pb;

option java_package = "org.apache.hadoop.hbase.protobuf.generated";
option java_outer_classname = "ExportProtos";
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;
option java_generic_services = true;

import "Client.proto";

service ExportService {
  rpc export (ExportRequest) returns (ExportResponse);
}

message ExportRequest {
  required Scan scan = 1;
  required string outputPath = 2;
  optional bool compressed = 3 [default = false];
  optional string compressType = 4;
  optional string compressCodec = 5;
  optional DelegationToken fsToken = 6;
}
message ExportResponse {
  required uint64 rowCount = 1;
  required uint64 cellCount = 2;
}

